# mosaico-alchemy

./: README.md  pyproject.toml
doc/: README.md  mkdocs.yml  pyproject.toml
doc/docs/: index.md
doc/docs/packs/: index.md
doc/docs/packs/manipulation/: extending.md  index.md
doc/docs/stylesheets/: extra.css
src/mosaico_alchemy/: cli.py  configs.py
src/mosaico_alchemy/manipulation/: README.md  __init__.py  contracts.py  main.py
src/mosaico_alchemy/manipulation/adapters/: __init__.py  base.py  registry.py
src/mosaico_alchemy/manipulation/adapters/droid/robot/: end_effector.py  joint_state.py  pose.py  velocity.py
src/mosaico_alchemy/manipulation/adapters/fractal_rt1/: __init__.py
src/mosaico_alchemy/manipulation/adapters/mml/: __init__.py
src/mosaico_alchemy/manipulation/adapters/reassemble/: segment_info.py
src/mosaico_alchemy/manipulation/datasets/: __init__.py  registry.py
src/mosaico_alchemy/manipulation/datasets/droid/: __init__.py  iterators.py  plugin.py
src/mosaico_alchemy/manipulation/datasets/fractal_rt1/: __init__.py  iterators.py  plugin.py
src/mosaico_alchemy/manipulation/datasets/mml/: __init__.py  plugin.py
src/mosaico_alchemy/manipulation/datasets/reassemble/: __init__.py  iterators.py  plugin.py
src/mosaico_alchemy/manipulation/ontology/: __init__.py  audio.py  end_effector.py  event_camera.py  joint_torque_command.py  segment_info.py  spatial_bounds.py  tekscan_sensor.py  terminate_episode.py  text_embedding.py
src/mosaico_alchemy/manipulation/readers/: __init__.py  hdf5_reader.py  tfds_reader.py
src/mosaico_alchemy/manipulation/runner/: __init__.py  runner.py  stop_controller.py  topic_ingester.py
src/mosaico_alchemy/manipulation/runner/executors/: file_executor.py  rosbag_executor.py
src/mosaico_alchemy/manipulation/runner/reporters/: reports.py  sequence_progress.py  upload_reporter.py
src/mosaico_alchemy/manipulation/utils/: extract_video_frame.py
(+37 files in other folders)
