[project]
name = "doc"
version = "0.1.0"
description = ""
authors = [{ name = "mosaico-labs", email = "info@mosaico.dev" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.1,<10.0.0)",
    "mkdocstrings[python] (>=1.0.2,<2.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "mike (>=2.1.0,<3.0.0)",
    "markdownify (>=1.2.2,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "doc", from = "src" }]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
